--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,9 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/car_layout"
+    android:id="@+id/fr_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#66ccff"
     tools:context=".MainActivity">
 
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/btn_camera_request"
-        android:onClick="startPreview"
-        android:src="@drawable/ic_camera_black_48dp"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
-</RelativeLayout>
+</FrameLayout>
