--- a/app/src/main/res/layout/fragment_control.xml
+++ b/app/src/main/res/layout/fragment_control.xml
@@ -1,4 +1,5 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,10 +7,17 @@
     tools:context="premiumapp.org.camerlot.ControlFragment">
 
 
-    <ImageButton
+    <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btnCameraRequest"
-        android:src="@drawable/ic_camera_black_48dp"
-        android:layout_gravity="center" />
-</FrameLayout>
+        android:id="@+id/btn_camera_request"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="@dimen/floating_button_margin_bottom"
+        android:layout_marginRight="@dimen/floating_button_margin_right"
+        android:src="@drawable/ic_camera_rear_white_36dp"
+        app:elevation="@dimen/floating_button_elevation"
+        app:rippleColor="@color/rippleColor"
+        app:backgroundTint="@color/colorAccent" />
+
+</RelativeLayout>
