--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,8 +4,18 @@
     tools:context=".MainActivity">
 
     <item
-        android:id="@+id/camera"
+        android:id="@+id/front_camera"
+        android:icon="@drawable/ic_camera_front_white_36dp"
         android:orderInCategory="50"
         android:title="Camera"
-        app:showAsAction="never" />
+        android:visible="false"
+        app:showAsAction="always" />
+
+    <item
+        android:id="@+id/back_camera"
+        android:icon="@drawable/ic_camera_rear_white_36dp"
+        android:orderInCategory="50"
+        android:title="Camera"
+        android:visible="false"
+        app:showAsAction="always" />
 </menu>
