--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,9 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="floating_button_margin_bottom">80dp</dimen>
+    <dimen name="floating_button_margin_right">50dp</dimen>
+    <dimen name="floating_button_elevation">5dp</dimen>
+
 </resources>
